syntax = "proto3";

option java_multiple_files = true;
option java_package = "gtunnel";
option java_outer_classname = "GTunnel";
option go_package = "./";

package client;

/* The client service is the grpc interface for a gClient to manage tunnels
* and tcp connections with gServer.*/
service ClientService {
  // Gets a stream of control messages from the server
  rpc CreateEndpointControlStream(EndpointControlMessage) returns (stream EndpointControlMessage) {}
  // Gets a stream of control messages for creating and deleting tcp connections
  rpc CreateTunnelControlStream(stream TunnelControlMessage) returns (stream TunnelControlMessage) {} 
  // Gets a configuration message based on the bearer token
  rpc GetConfigurationMessage(GetConfigurationMessageRequest) returns (GetConfigurationMessageResponse) {}

  // Bidirectional stream representing a TCP connection
  rpc CreateConnectionStream(stream BytesMessage) returns (stream BytesMessage) {}
}

message BytesMessage {
  string tunnel_id = 1;
  string connection_id = 2;
  bytes content = 3;
}

message GetConfigurationMessageRequest {
  string hostname = 1;
};

message GetConfigurationMessageResponse {}

message EndpointControlMessage {
  int32 operation = 1;
  string tunnel_id = 2;
  int32 error_status = 3;
  uint32 listen_ip = 4;
  uint32 listen_port = 5;
  uint32 destination_ip = 6;
  uint32 destination_port = 7;
}

message TunnelControlMessage {
  int32 operation = 1;
  int32 error_status = 2;
  string tunnel_id = 3;
  string connection_id = 4;
}
